--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   equatable: ^2.0.5
   country_picker: ^2.0.27
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
