--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.1.2
   emoji_picker_flutter: ^4.3.0
   google_fonts: ^6.2.1
+  file_picker: ^9.0.2
   
 
 dev_dependencies:
