--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   emoji_picker_flutter: ^4.3.0
   google_fonts: ^6.2.1
   file_picker: ^9.0.2
+  percent_indicator: ^4.2.4
+  dio: ^5.8.0+1
+  path_provider: ^2.1.5
+  permission_handler: ^11.4.0
   
 
 dev_dependencies:
